@@ -131,6 +131,8 @@ def testDataflowAnalysis(taskName, dirName, className, diff) {
         '--add-opens',
         'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
         '--add-opens',
+        'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-opens',
         'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
         '--add-opens',
         'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
